fix spacing

--- a/_sass/core/_base.scss
+++ b/_sass/core/_base.scss
@@ -133,7 +133,6 @@ blockquote {
     text-align: right;
   }
 
-  p { margin: 0 }
   small { color: #515151 }
 
   small:before, &.pull-right small:after {
